# curso-cdpo-usp

./: README.md  main.py  pyproject.toml
notebooks/ECD Q1: Estatística para Ciência de Dados/: ECD 2 - Probabilidade Parte 1.ipynb  ECD 3 - Probabilidade Parte 2.ipynb
notebooks/OPO Q1: Otimização Contínua/: OPO 0.ipynb  OPO_1.ipynb  OPO_2.ipynb  OPO_3.ipynb
