[project]
name = "curso-cdpo-usp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "latex>=0.7.0",
    "matplotlib>=3.10.8",
    "mip>=1.17.6",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statistics>=1.0.3.5",
    "statsmodels>=0.14.6",
]
